# MySuperMario

./: CMakeLists.txt  CMakePresets.json  README.md  cpp.hint  utility.cpp
include/: Animation.h  BanzaiBill.h  BenzaiBill.h  BlockFactory.h  BlockManagement.h  Blocks.h  BobOmb.h  BoomBoom.h  Boss.h  Brick.h  Bullet.h  Button.h  BuzzyBeetle.h  Camera.h  Cannon.h  Character.h  Clock.h  CloudBlock.h  Coin.h  CoinBlock.h  CoinEffect.h  Collision.h  CollisionInfo.h  Command.h  DecorBlock.h  Direction.h  DryBones.h  DustEffect.h  EditorEngine.h  Effect.h  Enemy.h  EnemyFactory.h  EnemyFireBall.h  Entity.h  EntityState.h  FireBall.h  FirePiranhaPlant.h  FireStarState.h  FireState.h  Floor.h  (+58 more)
resources/animation/: luigi1.txt  mario1.txt
resources/maps/: MAP_1.1(enemyAnditem).json  MAP_1.1.json  MAP_1.2.json  MAP_1.json  MAP_1.txt  camera.json  emap_1.json  emap_2.json  emap_3.json  kmap_1.json  kmap_2.json  kmap_3.json  kmap_4.json  kmap_5.json
resources/maps/MyMarioPrj/: MARIO_TILED_project.tiled-project  MARIO_TILED_project.tiled-session  MarioMap_proj.tiled-session
resources/maps/MyMarioPrj/maps/: MAP_1.1.json  MAP_1.1.tmx  MAP_1.2.tmx
resources/maps/MyMarioPrj/tilesets/: Map_tileset.tsx  MarioTileset.tsx  background6.tsx  tileset_mario_2.tsx
src/: Animation.cpp  BanzaiBill.cpp  BenzaiBill.cpp  Blocks.cpp  BobOmb.cpp  BoomBoom.cpp  Boss.cpp  Brick.cpp  Bullet.cpp  Button.cpp  BuzzyBeetle.cpp  Camera.cpp  Cannon.cpp  Character.cpp  Clock.cpp  CloudBlock.cpp  Coin.cpp  CoinBlock.cpp  CoinEffect.cpp  Collision.cpp  CollisionInfo.cpp  Command.cpp  DecorBlock.cpp  DryBones.cpp  DustEffect.cpp  EditorEngine.cpp  Effect.cpp  Enemy.cpp  EnemyFireBall.cpp  Entity.cpp  FireBall.cpp  FirePiranhaPlant.cpp  Floor.cpp  Flower.cpp  GUI.cpp  Game.cpp  GameEngine.cpp  GameSerialization.cpp  Global.cpp  Goomba.cpp  (+44 more)
